--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -40,3 +40,74 @@
         text-align: center;
     }
 }
+
+header {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    background: var(--bg-color);
+    box-shadow: 0 1px 6px 0 rgb(32 33 36 / 10%);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 14%;
+    transition: all .50s ease;
+    background-color: rgb(195, 176, 164);
+    opacity: 0.8;
+    color: white;
+    height: 6rem;
+}
+
+.logo {
+    width: 100%;
+    height: auto;
+}
+
+.navbar {
+    display: flex;
+}
+
+.navbar a {
+    color: var(--text-color);
+    font-size: 18px;
+    font-weight: 400;
+    margin: 10px 22px;
+    transition: 0.5s ease-in-out;
+    padding: 5px;
+}
+
+.navbar a:hover {
+    border-bottom: 2px solid white;
+}
+
+.h-icons {
+    display: flex;
+    align-items: center;
+}
+
+.h-icons i {
+    margin-left: 10px;
+    margin-right: 15px;
+    transition: all .50 ease;
+}
+
+.h-icons i:hover {
+    transform: translateY(-4px);
+}
+
+#menu-icon {
+    height: 30px;
+    width: 30px;
+    background: var(--text-color);
+    color: var(--bg-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    border-radius: 50%;
+    z-index: 10001;
+    cursor: pointer;
+    display: none;
+}
