--- a/public/css/bag.css
+++ b/public/css/bag.css
@@ -75,6 +75,10 @@
     cursor: pointer;
 }
 
+.btn-area span {
+    font-weight: 400;
+}
+
 .btn-area:hover {
     background-color: #B8A398;
 }
@@ -95,7 +99,7 @@
     flex: 25%;
     margin-left: 20px;
     padding: 20px;
-    height: 332px;
+    height: 300px;
     background: #fff;
     box-shadow: rgba(100, 100, 111, 0.2) 0 7px 29px 0;
 }
@@ -123,26 +127,11 @@
     margin-bottom: 10px;
 }
 
-#btn2 {
-    background-color: #B8A398;
-    color: #fff;
-    text-decoration: none;
-    display: block;
-    text-align: center;
-    height: 40px;
-    line-height: 40px;
-    font-weight: 600;
-}
-
 .right-bar i {
     margin-right: 15px;
 }
 
 #btn1:hover {
-    background-color: #CCCCBE;
-}
-
-#btn2:hover {
     background-color: #CCCCBE;
 }
 
