--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -20,3 +20,9 @@
     flex-direction: column;
     align-items: center;
 }
+
+.produt {
+    margin: 3rem;
+    font-size: larger;
+    margin-left: 10rem !important;
+}
